[gd_scene load_steps=27 format=3 uid="uid://dn1ka6cgfatjc"]

[ext_resource type="Script" uid="uid://crc1f6a3fibbg" path="res://scripts/enemy_pawn.gd" id="1_cbncm"]
[ext_resource type="Texture2D" uid="uid://5ify0vc5sqoa" path="res://assets/corrupted pawncharacter.png" id="1_kw265"]
[ext_resource type="Texture2D" uid="uid://dm1waa8v5ised" path="res://assets/enemyhealthempty.png" id="3_r47x2"]
[ext_resource type="Texture2D" uid="uid://cb4j80up7t5s5" path="res://assets/enemyhealthfull.png" id="4_t0c4q"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cbncm"]
radius = 16.0
height = 74.0

[sub_resource type="Animation" id="Animation_qhqgy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.36602142, 1),
"update": 0,
"values": [Vector2(0.07, 0.13), Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.36602142, 1),
"update": 0,
"values": [Vector2(0, -7), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_g2els"]
resource_name = "walk"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.11, 0.09), Vector2(0.1, 0.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dqkch"]
_data = {
&"RESET": SubResource("Animation_qhqgy"),
&"jump": SubResource("Animation_dqkch"),
&"walk": SubResource("Animation_g2els")
}

[sub_resource type="Animation" id="Animation_pn8is"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cbncm"]
resource_name = "death"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.2, 0.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.99999994, 0.1254001, 0.07805187, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r47x2"]
_data = {
&"RESET": SubResource("Animation_pn8is"),
&"death": SubResource("Animation_cbncm")
}

[sub_resource type="Animation" id="Animation_ywpfa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_t0c4q"]
resource_name = "hurt"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(0.3077861, 1),
"update": 0,
"values": [Vector2(0.115, 0.115), Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.99998075, 0.32389256, 0.26108572, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kymhc"]
_data = {
&"RESET": SubResource("Animation_ywpfa"),
&"hurt": SubResource("Animation_t0c4q")
}

[sub_resource type="Animation" id="Animation_kymhc"]
length = 0.001

[sub_resource type="Animation" id="Animation_r47x2"]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.3),
"transitions": PackedFloat32Array(1.9318733, 0.57434916, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(80, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.3),
"transitions": PackedFloat32Array(2.143547, 0.5176324, 1),
"update": 0,
"values": [0.0, 0.29670597283903605, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hurtbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.3),
"transitions": PackedFloat32Array(1.9318733, 0.57434916, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(80, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bxt6w"]
resource_name = "attack_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.3),
"transitions": PackedFloat32Array(1.9318733, 0.57434916, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-80, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.3),
"transitions": PackedFloat32Array(2.143547, 0.5176324, 1),
"update": 0,
"values": [0.0, -0.29670597283903605, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hurtbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.3),
"transitions": PackedFloat32Array(1.9318733, 0.57434916, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-80, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bxt6w"]
_data = {
&"RESET": SubResource("Animation_kymhc"),
&"attack": SubResource("Animation_r47x2"),
&"attack_left": SubResource("Animation_bxt6w")
}

[sub_resource type="Animation" id="Animation_ldb65"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lbalf"]
resource_name = "footstool"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.15, 0.05), Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 19.105), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.99998075, 0.3238926, 0.26108575, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j8fct"]
_data = {
&"RESET": SubResource("Animation_ldb65"),
&"footstool": SubResource("Animation_lbalf")
}

[sub_resource type="Animation" id="Animation_j8fct"]
resource_name = "spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.5),
"transitions": PackedFloat32Array(0.39229208, 0.37892914, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.12, 0.12), Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.2102241, 1),
"update": 0,
"values": [-8.726646259971648, 0.0]
}

[sub_resource type="Animation" id="Animation_4hunc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p1bxa"]
_data = {
&"RESET": SubResource("Animation_4hunc"),
&"spawn": SubResource("Animation_j8fct")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r47x2"]
radius = 31.0
height = 62.0

[node name="EnemyPawn" type="CharacterBody2D" groups=["Goon"]]
script = ExtResource("1_cbncm")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_kw265")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_cbncm")

[node name="UpdatePositionTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="WalkAnimation" type="AnimationPlayer" parent="." groups=["Goon"]]
libraries = {
&"": SubResource("AnimationLibrary_dqkch")
}
playback_default_blend_time = 0.5
speed_scale = 0.1

[node name="DeathAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../WalkAnimation")
libraries = {
&"": SubResource("AnimationLibrary_r47x2")
}

[node name="HurtAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kymhc")
}

[node name="AttackAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../DeathAnimation")
libraries = {
&"": SubResource("AnimationLibrary_bxt6w")
}

[node name="FootstoolAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_j8fct")
}

[node name="Spawn" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p1bxa")
}

[node name="HealthBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -25.0
offset_top = -59.000004
offset_right = 475.0
offset_bottom = 40.999996
scale = Vector2(0.1, 0.1)
max_value = 50.0
value = 50.0
texture_under = ExtResource("3_r47x2")
texture_progress = ExtResource("4_t0c4q")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_r47x2")

[connection signal="timeout" from="UpdatePositionTimer" to="." method="_on_update_position_timer_timeout"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
